# tgvmax_alert

./: .env  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml
alert_tgvmax/: bot.py  main.py  settings.py
src/: App.js  Filter.js
src/components/: ArrivalFilter.js  Arrivals.js  DateFilter.js  Departure.js  DepartureFilter.js  FreePlaces.js  HoverIcon.js  Journey.js  StationSelector.js  TrainTimeline.js  Travel.js
src/pages/: _app.js  index.js
src/pages/api/: freeplaces.js  stations.js
src/styles/: Home.pages.css  globals.css
src/utils/: fetchs.js  storage.js
