[tool.poetry]
name = "alert_tgvmax"
version = "0.1.0"
description = ""
authors = ["felixcapuano <felix.capuano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
requests = "^2.28.1"
"discord.py" = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "alert_tgvmax.main:main"
